force-app/core/main/default/objects/Two_Way_Simulator__c/Two_Way_Simulator__c.object-meta.xml
<CustomObject>
    <label>2-Way Simulator</label>
    <nameField>
        <label>Experience Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>2-Way Simulators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>