force-app/core/main/default/objects/Two_Way_Simulator__c/fields/Brand_Kit__c.field-meta.xml
<CustomField>
    <fullName>Brand_Kit__c</fullName>
    <label>Brand Kit</label>
    <referenceTo>Demo_Theme__c</referenceTo>
    <relationshipLabel>2-Way Simulators</relationshipLabel>
    <relationshipName>Two_Way_Simulators</relationshipName>
    <type>Lookup</type>
</CustomField>