force-app/core/main/default/objects/Two_Way_Simulator__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Email</fullName><default>true</default><label>Email</label></value>
            <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
            <value><fullName>RCS</fullName><default>false</default><label>RCS</label></value>
            <value><fullName>WhatsApp</fullName><default>false</default><label>WhatsApp</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>