force-app/core/main/default/objects/Two_Way_Simulator__c/fields/Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Config_JSON__c</fullName>
    <label>Config JSON</label>
    <description>The full simulator config (brand, content, conversation) driving HTML generation. Produced/edited in Story Studio.</description>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>