force-app/core/main/default/objects/Two_Way_Simulator__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Financial Services</fullName><default>true</default><label>Financial Services</label></value>
            <value><fullName>Health &amp; Life Sciences</fullName><default>false</default><label>Health &amp; Life Sciences</label></value>
            <value><fullName>Retail &amp; Consumer Goods</fullName><default>false</default><label>Retail &amp; Consumer Goods</label></value>
            <value><fullName>Manufacturing</fullName><default>false</default><label>Manufacturing</label></value>
            <value><fullName>Communications, Media &amp; Technology</fullName><default>false</default><label>Communications, Media &amp; Technology</label></value>
            <value><fullName>Public Sector</fullName><default>false</default><label>Public Sector</label></value>
            <value><fullName>Consumer Business Services</fullName><default>false</default><label>Consumer Business Services</label></value>
            <value><fullName>Energy &amp; Utilities</fullName><default>false</default><label>Energy &amp; Utilities</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>