force-app/core/main/default/objects/Two_Way_Simulator__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <referenceTo>Demo_Persona__c</referenceTo>
    <relationshipLabel>2-Way Simulators</relationshipLabel>
    <relationshipName>Two_Way_Simulators</relationshipName>
    <type>Lookup</type>
</CustomField>