force-app/core/main/default/objects/Two_Way_Simulator__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Channel__c</columns>
    <columns>Industry__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Experiences</label>
</ListView>